--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
      </style>
   </head>
   <body>
-    <center><h1>Hello, App Platform! This is just a test on DigitalOcean's PaaS 🤔</h1></center>
+    <center><h1>Hello, App Platform!! This is just a test on DigitalOcean's PaaS 🤔</h1></center>
   </body>
 </html>
